--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,13 @@
   "main": "dist/server.js",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^4.12.0",
     "koa": "^2.14.1",
     "koa-bodyparser": "^4.4.0",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
-    "koa-router": "^12.0.0"
+    "koa-router": "^12.0.0",
+    "prisma": "^4.12.0"
   },
   "scripts": {
     "build": "npx tsc",
