--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "@types/koa-logger": "^3.1.2",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^18.15.11",
-    "concurrently": "^8.0.1"
+    "concurrently": "^8.0.1",
+    "koa-body": "^6.0.1"
   }
 }
