--- a/backend/package.json
+++ b/backend/package.json
@@ -1,29 +1,32 @@
 {
   "name": "@nonstop/backend",
   "version": "1.0.0",
-  "main": "dist/server.js",
-  "license": "MIT",
-  "dependencies": {
-    "@prisma/client": "^4.12.0",
-    "koa": "^2.14.1",
-    "koa-bodyparser": "^4.4.0",
-    "koa-json": "^2.0.2",
-    "koa-logger": "^3.2.1",
-    "koa-router": "^12.0.0",
-    "prisma": "^4.12.0"
-  },
+  "description": "Back-end for practise social media app",
+  "main": "app.js",
   "scripts": {
     "build": "npx tsc",
     "dev": "nodemon src/Server.ts"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@prisma/client": "^4.12.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "pg": "^8.10.0"
+  },
   "devDependencies": {
-    "@types/koa": "^2.13.6",
-    "@types/koa-bodyparser": "^4.3.10",
-    "@types/koa-json": "^2.0.20",
-    "@types/koa-logger": "^3.1.2",
-    "@types/koa-router": "^7.4.4",
-    "@types/node": "^18.15.11",
-    "concurrently": "^8.0.1",
-    "koa-body": "^6.0.1"
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
+    "@types/passport": "^1.0.12",
+    "@types/passport-google-oauth20": "^2.0.11",
+    "prisma": "^4.12.0-integration-rtld-deepbind.3",
+    "tsconfig-paths": "^4.2.0"
   }
 }
