--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "root",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "common",
+    "frontend",
+    "backend"
   ],
   "devDependencies": {
-    "lerna": "^6.6.1"
+    "lerna": "^6.6.1",
+    "ts-node": "^10.9.1"
   }
 }
