feat: backend changes dump

--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
       "composite": true,
       "outDir": "./dist",
-      "rootDir": "./src",
+      "rootDir": "./",
       "declaration": true,
       "strict": true,
       "incremental": true,
