--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nonstop/backend",
   "version": "1.0.0",
-  "description": "Back-end for practise social media app",
+  "description": "Back-end for nonsto",
   "main": "app.js",
   "scripts": {
     "build": "npx tsc",
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@nonstop/common": "^1.0.0",
     "@prisma/client": "^4.12.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "lodash": "^4.17.21",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.10.0"
@@ -24,6 +26,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.7",
+    "@types/lodash": "^4.14.194",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "prisma": "^4.12.0-integration-rtld-deepbind.3",
