--- a/common/package.json
+++ b/common/package.json
@@ -2,5 +2,8 @@
   "name": "@nonstop/common",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "npx tsc"
+  }
 }
